fix: cesupa logo overlapping button

--- a/styles/start.css
+++ b/styles/start.css
@@ -28,9 +28,7 @@
 }
 
 .start .cesupa-logo {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 100px;
+  margin-top: 100px;
   width: 200px;
 }
 
@@ -76,10 +74,18 @@
     font-weight: 600;
     font-size: 14px;
   }
+
+  .start .cesupa-logo {
+    width: 150px;
+  }
 }
 
 @media (max-width: 340px) {
   .start img {
     width: 250px;
+  }
+
+  .start .cesupa-logo {
+    width: 120px;
   }
 }
